--- a/app/src/main/res/layout/fragment_simple_song_list.xml
+++ b/app/src/main/res/layout/fragment_simple_song_list.xml
@@ -22,11 +22,13 @@
                 android:text="Button" />
 
             <androidx.recyclerview.widget.RecyclerView
+
                 android:id="@+id/songView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="50dp"
-                android:nestedScrollingEnabled="true" />
+                android:nestedScrollingEnabled="true"
+                />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
