--- a/app/src/main/res/layout/fragment_simple_song_list.xml
+++ b/app/src/main/res/layout/fragment_simple_song_list.xml
@@ -6,14 +6,21 @@
     tools:context="SongsMain.Tabs.SimpleSongList">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/mynestedScrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/button7"
@@ -26,9 +33,7 @@
                 android:id="@+id/songView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="50dp"
-                android:nestedScrollingEnabled="true"
-                />
+                android:layout_marginBottom="50dp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
