--- a/app/src/main/res/layout/song_example.xml
+++ b/app/src/main/res/layout/song_example.xml
@@ -12,12 +12,12 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginStart="10dp"
         android:gravity="start"
         android:singleLine="true"
         android:text="Titluandreinowuacumamdajndsakdknsajdnsajkdnsajkdb"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/songOptions"
         app:layout_constraintHorizontal_bias="0.14"
@@ -46,7 +46,7 @@
         android:singleLine="true"
         android:text="Author"
         android:textColor="#C8C8C8"
-        android:textSize="14sp"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/songOptions"
         app:layout_constraintHorizontal_bias="0.314"
